# seabed-public

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SEABED_RELAY.md  SECURITY.md  pyproject.toml  seabed.py
.github/workflows/: ci.yml
docs/: TYPES.md
examples/: config.json
src/seabed_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py
tests/: test_cli.py  test_client.py  test_config.py  test_models.py
