[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "seabed-cli"
version = "0.1.0"
description = "A small, typed command-line interface for the Seabed Connect API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jack Hales" }]
keywords = ["seabed", "cli", "agents", "documents", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9",
]

[project.scripts]
seabed = "seabed_cli.cli:main"

[project.urls]
Homepage = "https://seabed.jackhalestesting.xyz"
Documentation = "https://seabed.jackhalestesting.xyz/api"
Repository = "https://github.com/Halesyy/seabed-public"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
